--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,18 +6,29 @@ body {
 }
 
 #book-entering-form {
-  height: 300px;
-  width: 200px;
+  height: 350px;
+  width: 250px;
   border: 1px solid black;
-  padding: 0px 5px;
+  padding: 10px 10px;
   margin: 0 auto;
+  z-index: 1;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) ;
 }
+
+.invisible{
+  display: none;
+}
+
 .form-topper {
   display: flex;
   width: 100%;
   justify-content: flex-end;
-  
+  margin-bottom: 20px;
 }
+
 #closing-button {
   display: inline-block;
   width: 15px;
@@ -26,6 +37,7 @@ body {
   text-align: center;
   border: 1px solid black;
   border-radius: 100%;
+  cursor: pointer;
 }
 
 .book-input {
@@ -33,7 +45,15 @@ body {
   flex-direction: column;
   text-align: center;
   justify-content: space-between;
-  font-size: 20px;
+  font-size: 30px;
   margin-bottom:20px;
   gap: 5px;
+}
+
+#form-footer {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 0;
+  margin-top: 60px;
+  
 }
