--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,24 +1,33 @@
+@font-face {
+  font-family: librarian;
+  src: url(../fonts/LIBRARIA.ttf);
+}
+
 html,
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
 
+body {
+  background-color: rgb(255, 222, 173);
 }
 
 .darken {
   background: linear-gradient(
     rgba(0, 0, 0, 0.7), 
-    rgba(0, 0, 0, 0.7)
-  );
+    rgba(0, 0, 0, 0.7) 
+  ) !important;
 }
 
 #page-header {
   text-align: center;
+  font-family: librarian;
+  border-bottom: 5px solid rgb(51, 9, 9);
 }
 
 #library {
-  border: 1px solid black;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -27,38 +36,45 @@ body {
 }
 
 .book-container {
-  border: 1px solid green;
-  padding: 10px 50px;
+  background-color: rgb(195, 191, 150);
+  border: 5px solid rgb(51, 9, 9);
+  color: rgb(51, 9, 9);
+  border-radius: 5%;
+  padding: 5px 10px;
 }
 
 .book-container-line {
-  margin: 0px 0px 20px 20px;
-  padding: 10px;
-  border: 1px solid black;
+  margin: 0px 20px 20px 20px;
   text-align: center;
   display: flex;
   flex-direction: column;
+  border: 1px;
 }
 
 
 
 .have-read {
-  background-color: pink;
-  box-shadow: 5px 5px 15px 5px #000000;
+  background-color: rgb(51, 9, 9);
+  color: rgb(195, 191, 150);
+  box-shadow: 5px 5px 15px 5px #0000009f;
   display: flex;
   justify-content: center;
-  padding: 15px;
 }
 
 #read-div {
   font-size: 25px;
   font-weight: bold;
+  border: 3px solid rgb(51, 9, 9);
+  border-radius: 5%;
+  padding: 5px 5px;
+  cursor: pointer;
 }
 
 
 .book-container, p, h2 {
   margin-top: 0px;
   margin-bottom: 0px;
+  font-family: librarian;
 }
 
 .book-container-remove {
@@ -68,12 +84,16 @@ body {
 
 .book-container-remove, button {
   font-size: 20px;
+  margin: 0 auto;
 }
 
 #book-entering-form {
   height: 350px;
   width: 250px;
-  border: 1px solid black;
+  border: 5px solid rgb(51, 9, 9);
+  border-radius: 5%;
+  color: rgb(51, 9, 9);
+  font-family: librarian;
   padding: 10px 10px;
   margin: 0 auto;
   z-index: 1;
@@ -81,7 +101,7 @@ body {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  background-color: white;
+  background-color: rgb(195, 191, 150);
 }
 
 .invisible{
@@ -139,10 +159,16 @@ body {
   line-height: 50px;
   margin-left: auto;
   text-align: center;
-  border: 1px solid blue;
+  border: 1px solid rgb(51, 9, 9);
   font-size: 80px;
+  color: rgb(51, 9, 9);
   width: 60px;
   height: 60px;
   border-radius: 100%;
   cursor: pointer;
+  transition: transform .7s ease-in-out;
+}
+
+#show-book-entering-form:hover {
+  transform: rotate(360deg);
 }
